--- a/index.html
+++ b/index.html
@@ -103,15 +103,11 @@
         <button class="footer-form"><div class="button">Submit</div></button>
       </form>
       <figure class="GitHub">
-        <figcaption class="footer_text" class="rotate">
+        <figcaption class="footer_text gentleSwing">
           Proudly created by <em>Oke</em>
         </figcaption>
         <a href="https://github.com/okelukas"
-          ><img
-            src="GitHubIcon.png"
-            alt="GitHubIcon"
-            class="GitHubIcon"
-            class="rotate"
+          ><img src="GitHubIcon.png" alt="GitHubIcon" class="GitHubIcon"
         /></a>
       </figure>
     </footer>
